--- a/index_form.html
+++ b/index_form.html
@@ -33,8 +33,19 @@ if (empty($CFG->authloginviaemail)) {
               echo html_writer::end_tag('div');
           }
         ?>
+        <script>
+        $(function(){
+          $('#adminlogin').click(function(event){
+            $('.loginform').toggle();
+            $('.rememberpass').toggle();
+            $('input[type="submit"]').toggle();
+            $('.forgetpass').toggle();
+          });
+        });
+        </script>
         <form action="<?php echo $CFG->httpswwwroot; ?>/login/index.php" method="post" id="login" <?php echo $autocomplete; ?> >
-          <div class="loginform">
+          <div id="adminlogin"><a>INICIAR SESIÓN (SOLO ADMINISTRADORES)</a></div>
+          <div style='display:none;' class="loginform">
             <div class="form-label"><label for="username"><?php echo($strusername) ?></label></div>
             <div class="form-input">
               <input type="text" name="username" id="username" size="15" value="<?php p($frm->username) ?>" />
@@ -47,14 +58,14 @@ if (empty($CFG->authloginviaemail)) {
           </div>
             <div class="clearer"><!-- --></div>
               <?php if (isset($CFG->rememberusername) and $CFG->rememberusername == 2) { ?>
-              <div class="rememberpass">
+              <div style='display:none;' class="rememberpass">
                   <input type="checkbox" name="rememberusername" id="rememberusername" value="1" <?php if ($frm->username) {echo 'checked="checked"';} ?> />
                   <label for="rememberusername"><?php print_string('rememberusername', 'admin') ?></label>
               </div>
               <?php } ?>
           <div class="clearer"><!-- --></div>
-          <input type="submit" id="loginbtn" value="<?php print_string("login") ?>" />
-          <div class="forgetpass"><a href="forgot_password.php"><?php print_string("forgotten") ?></a></div>
+          <input style='display:none;' type="submit" id="loginbtn" value="<?php print_string("login") ?>" />
+          <div style='display:none;' class="forgetpass"><a href="forgot_password.php"><?php print_string("forgotten") ?></a></div>
         </form>
         <div class="desc">
             <?php
