Cambio de título

--- a/index_form.html
+++ b/index_form.html
@@ -44,7 +44,7 @@ if (empty($CFG->authloginviaemail)) {
         });
         </script>
         <form action="<?php echo $CFG->httpswwwroot; ?>/login/index.php" method="post" id="login" <?php echo $autocomplete; ?> >
-          <div id="adminlogin"><a>INICIAR SESIÓN (SOLO ADMINISTRADORES)</a></div>
+          <div id="adminlogin"><a>ADMINISTRADORES</a></div>
           <div style='display:none;' class="loginform">
             <div class="form-label"><label for="username"><?php echo($strusername) ?></label></div>
             <div class="form-input">
